Bug 96531 - KPat: Mod3 incorrect unwinnable game message
Summary: KPat: Mod3 incorrect unwinnable game message
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Stephan Kulow
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-07 16:29 UTC by Inge Wallin
Modified: 2008-09-09 18:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
saved kpat mod3 game (5.99 KB, text/plain)
2008-06-03 17:58 UTC, Skander Morgenthaler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Inge Wallin 2005-01-07 16:29:28 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

The dialog that tells the user that the game is unwinnable is wrong. Sometimes the game is winnable anyhow.  

This bug is for the Mod3 patience.  The same is true for at least Klondike, draw 3 (bug 91317), but that is a separate bug from this one.
Comment 1 Inge Wallin 2005-01-07 16:46:44 UTC
CVS commit by ingwa: 

Fix bug 96531: KPat: Mod3 incorrect unwinnable game message

 - Changed the criteria for a lost game in Mod3

BUG: 96531


  M +5 -0      CHANGES   1.17
  M +77 -47    mod3.cpp   1.42



Comment 2 kevin russell 2005-09-26 23:46:02 UTC
I am using KDE 3.4 and KPatience 2.2.2., and just easily played to success a game (Mod3 38874810) that also stated thta the game was unwinnable, when it was
Comment 3 Martin Flöser 2008-04-24 16:32:41 UTC
I just played a mod3 game (729328427) which stated unsolvable, but I was able to win. I used current svn. Because of that I reopen the bug ;-)
Comment 4 Skander Morgenthaler 2008-06-03 17:58:30 UTC
Created attachment 25090 [details]
saved kpat mod3 game

I just came across a game that was also reported as "unwinnable" - and if you
move a card from the wrong pile is report$

To render the game "lost", just move the 9 of spades one slot to the left.
To change the message from "unwinnable" to "winnable" move the 5 of diamonds
one slot to the left.

Of course you can do both and easily win the game, even after it is "lost" ;-)

kpat (post 4.1-beta1) build from trunk, using rev. 815513
Comment 5 Skander Morgenthaler 2008-06-03 18:05:19 UTC
the line that was cut off (by the $-sign) was supposed to be
"... and if you move a card from the wrong pile is reported as "lost" - even though it is still quite easy to win that game."
Comment 6 Antti J. Huhtala 2008-08-05 11:43:31 UTC
The "helper" in kpat is often dead wrong. For example, it says "This game is lost" even when there is a big window in the middle of the screen stating: "Congratulations! You have won." I have a screenshot to prove this.
Dozens of times it has said: "Nope, this game cannot be won anymore". If I keep on playing, it often starts to behave and changes the message to "...can still be won!"
Comment 7 Stephan Kulow 2008-09-09 18:38:50 UTC
#6 is most likely another bug - this bug is fixed in r859163