Fix bug 96531: KPat: Mod3 incorrect unwinnable game message

- Changed the criteria for a lost game in Mod3

BUG: 96531

svn path=/trunk/kdegames/kpat/; revision=376125